--- a/packages/client/.storybook/preview-head.html
+++ b/packages/client/.storybook/preview-head.html
@@ -2,6 +2,10 @@
 
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link
-  href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap"
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+/>
+<link
+  href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap"
   rel="stylesheet"
 />
